# unirtos-demo-helloworld

./: CMakeLists.txt  env_config.json  hello_world.c
